Setup for defualt starting

--- a/NOTEBOOK/01_data_collection.ipynb
+++ b/NOTEBOOK/01_data_collection.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "mtQDRoEHP2pr",
       "metadata": {
         "colab": {
@@ -16,15 +16,52 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "Cloning into 'sp500_prediction'...\n",
-            "remote: Enumerating objects: 6351, done.\u001b[K\n",
-            "remote: Counting objects: 100% (6351/6351), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (5819/5819), done.\u001b[K\n",
-            "remote: Total 6351 (delta 379), reused 6316 (delta 369), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (6351/6351), 21.82 MiB | 19.43 MiB/s, done.\n",
-            "Resolving deltas: 100% (379/379), done.\n",
-            "/content/sp500_prediction/sp500_prediction/sp500_prediction\n"
+            "Defaulting to user installation because normal site-packages is not writeable\n",
+            "Requirement already satisfied: kagglehub in /home/vscode/.local/lib/python3.12/site-packages (0.3.13)\n",
+            "Requirement already satisfied: packaging in /home/vscode/.local/lib/python3.12/site-packages (from kagglehub) (25.0)\n",
+            "Requirement already satisfied: pyyaml in /home/vscode/.local/lib/python3.12/site-packages (from kagglehub) (6.0.3)\n",
+            "Requirement already satisfied: requests in /home/vscode/.local/lib/python3.12/site-packages (from kagglehub) (2.32.5)\n",
+            "Requirement already satisfied: tqdm in /home/vscode/.local/lib/python3.12/site-packages (from kagglehub) (4.67.1)\n",
+            "Requirement already satisfied: charset_normalizer<4,>=2 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (3.4.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (3.11)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (2.6.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (2026.1.4)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/vscode/.local/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Downloading from https://www.kaggle.com/api/v1/datasets/download/federalreserve/interest-rates?dataset_version_number=1...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 6.90k/6.90k [00:00<00:00, 12.8MB/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Extracting files...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
           ]
         }
       ],
@@ -49,13 +86,152 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "id": "U9I5TuoK19_w",
       "metadata": {
         "id": "U9I5TuoK19_w"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Year</th>\n",
+              "      <th>Month</th>\n",
+              "      <th>Day</th>\n",
+              "      <th>Federal Funds Target Rate</th>\n",
+              "      <th>Federal Funds Upper Target</th>\n",
+              "      <th>Federal Funds Lower Target</th>\n",
+              "      <th>Effective Federal Funds Rate</th>\n",
+              "      <th>Real GDP (Percent Change)</th>\n",
+              "      <th>Unemployment Rate</th>\n",
+              "      <th>Inflation Rate</th>\n",
+              "      <th>date</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1954</td>\n",
+              "      <td>7</td>\n",
+              "      <td>1</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.80</td>\n",
+              "      <td>4.6</td>\n",
+              "      <td>5.8</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1954-07-01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1954</td>\n",
+              "      <td>8</td>\n",
+              "      <td>1</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.22</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1954-08-01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1954</td>\n",
+              "      <td>9</td>\n",
+              "      <td>1</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.06</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>6.1</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1954-09-01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1954</td>\n",
+              "      <td>10</td>\n",
+              "      <td>1</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.85</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>5.7</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1954-10-01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1954</td>\n",
+              "      <td>11</td>\n",
+              "      <td>1</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.83</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>5.3</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1954-11-01</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Year  Month  Day  Federal Funds Target Rate  Federal Funds Upper Target  \\\n",
+              "0  1954      7    1                        NaN                         NaN   \n",
+              "1  1954      8    1                        NaN                         NaN   \n",
+              "2  1954      9    1                        NaN                         NaN   \n",
+              "3  1954     10    1                        NaN                         NaN   \n",
+              "4  1954     11    1                        NaN                         NaN   \n",
+              "\n",
+              "   Federal Funds Lower Target  Effective Federal Funds Rate  \\\n",
+              "0                         NaN                          0.80   \n",
+              "1                         NaN                          1.22   \n",
+              "2                         NaN                          1.06   \n",
+              "3                         NaN                          0.85   \n",
+              "4                         NaN                          0.83   \n",
+              "\n",
+              "   Real GDP (Percent Change)  Unemployment Rate  Inflation Rate       date  \n",
+              "0                        4.6                5.8             NaN 1954-07-01  \n",
+              "1                        NaN                6.0             NaN 1954-08-01  \n",
+              "2                        NaN                6.1             NaN 1954-09-01  \n",
+              "3                        8.0                5.7             NaN 1954-10-01  \n",
+              "4                        NaN                5.3             NaN 1954-11-01  "
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.head()"
+      ]
     }
   ],
   "metadata": {
@@ -76,7 +252,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.1"
+      "version": "3.12.12"
     }
   },
   "nbformat": 4,
