Project cofirmed_data set constructed

--- a/NOTEBOOK/01_data_collection.ipynb
+++ b/NOTEBOOK/01_data_collection.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "mtQDRoEHP2pr",
       "metadata": {
         "colab": {
@@ -25,73 +25,10 @@
             "Requirement already satisfied: charset_normalizer<4,>=2 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (3.4.4)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (3.11)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (2.6.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (2026.1.4)\n"
+            "Requirement already satisfied: certifi>=2017.4.17 in /home/vscode/.local/lib/python3.12/site-packages (from requests->kagglehub) (2026.1.4)\n",
+            "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.13), please consider upgrading to the latest version (0.4.0).\n"
           ]
         },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/home/vscode/.local/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Downloading from https://www.kaggle.com/api/v1/datasets/download/federalreserve/interest-rates?dataset_version_number=1...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 6.90k/6.90k [00:00<00:00, 12.8MB/s]"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Extracting files...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install kagglehub\n",
-        "\n",
-        "import pandas as pd\n",
-        "import kagglehub\n",
-        "\n",
-        "# Download dataset\n",
-        "path = kagglehub.dataset_download(\"federalreserve/interest-rates\")\n",
-        "\n",
-        "# Load CSV\n",
-        "df = pd.read_csv(f\"{path}/index.csv\")\n",
-        "\n",
-        "\n",
-        "# 3. Create a datetime column\n",
-        "df['date'] = pd.to_datetime(dict(year=df.Year, month=df.Month, day=df.Day))\n",
-        "df = df.sort_values(\"date\").reset_index(drop=True)\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "id": "U9I5TuoK19_w",
-      "metadata": {
-        "id": "U9I5TuoK19_w"
-      },
-      "outputs": [
         {
           "data": {
             "text/html": [
@@ -230,8 +167,172 @@
         }
       ],
       "source": [
-        "df.head()"
+        "#!pip install kagglehub\n",
+        "\n",
+        "#import pandas as pd\n",
+        "#import kagglehub\n",
+        "\n",
+        "# Download dataset\n",
+        "#path = kagglehub.dataset_download(\"federalreserve/interest-rates\")\n",
+        "\n",
+        "# Load CSV\n",
+        "#df = pd.read_csv(f\"{path}/index.csv\")\n",
+        "\n",
+        "\n",
+        "# 3. Create a datetime column\n",
+        "#df['date'] = pd.to_datetime(dict(year=df.Year, month=df.Month, day=df.Day))\n",
+        "#df = df.sort_values(\"date\").reset_index(drop=True)\n",
+        "\n",
+        "#df.head() "
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "54434104",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import yfinance as yf\n",
+        "import pandas as pd\n",
+        "from datetime import timedelta\n",
+        "\n",
+        "def build_event_panel(fomc_dates, tickers, vol_window=5):\n",
+        "    rows = []\n",
+        "\n",
+        "    start = fomc_dates.min() - timedelta(days=365)\n",
+        "    end = fomc_dates.max() + timedelta(days=10)\n",
+        "\n",
+        "    # Market benchmark\n",
+        "    market_close = yf.download(\n",
+        "        \"^GSPC\", start=start, end=end, auto_adjust=True, progress=False\n",
+        "    )[\"Close\"]\n",
+        "\n",
+        "     # Must be series\n",
+        "    if isinstance(market_close, pd.DataFrame):\n",
+        "        market_close = market_close.iloc[:, 0]\n",
+        "\n",
+        "    market_ret = market_close.pct_change()\n",
+        "\n",
+        "    for ticker in tickers:\n",
+        "        print(f\"Processing {ticker}...\")\n",
+        "\n",
+        "        asset_close = yf.download(\n",
+        "            ticker, start=start, end=end, auto_adjust=True, progress=False\n",
+        "        )[\"Close\"]\n",
+        "\n",
+        "        # Must be series\n",
+        "        if isinstance(asset_close, pd.DataFrame):\n",
+        "            asset_close = asset_close.iloc[:, 0]\n",
+        "\n",
+        "        asset_ret = asset_close.pct_change()\n",
+        "\n",
+        "        for event_date in fomc_dates:\n",
+        "            if event_date > asset_ret.index.max():\n",
+        "                continue\n",
+        "\n",
+        "            loc = asset_ret.index.searchsorted(event_date)\n",
+        "            if loc >= len(asset_ret) or loc < vol_window:\n",
+        "                continue\n",
+        "\n",
+        "            actual_date = asset_ret.index[loc]\n",
+        "\n",
+        "            # --- scalar market return ---\n",
+        "            market_val = market_ret.loc[actual_date]\n",
+        "            if isinstance(market_val, pd.Series):\n",
+        "                market_val = market_val.iloc[0]\n",
+        "\n",
+        "            asset_val = asset_ret.iloc[loc]\n",
+        "            if isinstance(asset_val, pd.Series):\n",
+        "                asset_val = asset_val.iloc[0]\n",
+        "\n",
+        "            ar = asset_val - market_val\n",
+        "\n",
+        "            # --- scalar volatility ---\n",
+        "            vol_window_ret = asset_ret.iloc[loc - vol_window:loc]\n",
+        "            vol = vol_window_ret.std()\n",
+        "            if isinstance(vol, pd.Series):\n",
+        "                vol = vol.iloc[0]\n",
+        "\n",
+        "            rows.append({\n",
+        "                \"event_date\": actual_date,\n",
+        "                \"ticker\": ticker,\n",
+        "                \"abnormal_return\": float(ar),\n",
+        "                \"volatility_5d\": float(vol),\n",
+        "                \"label\": int(ar > 0)\n",
+        "            })\n",
+        "\n",
+        "    return pd.DataFrame(rows)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "id": "8532360e",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Processing SPY...\n",
+            "Processing QQQ...\n",
+            "Processing IWM...\n",
+            "Processing XLF...\n",
+            "  event_date ticker  abnormal_return  volatility_5d  label\n",
+            "0 2015-12-16    SPY         0.000117       0.011856      1\n",
+            "1 2016-12-14    SPY        -0.000137       0.005306      0\n",
+            "2 2017-03-15    SPY         0.000279       0.002837      1\n",
+            "3 2017-06-14    SPY        -0.000272       0.002442      0\n",
+            "4 2017-09-20    SPY        -0.000274       0.000919      0\n",
+            "\n",
+            "Missing values:\n",
+            "event_date         0\n",
+            "ticker             0\n",
+            "abnormal_return    0\n",
+            "volatility_5d      0\n",
+            "label              0\n",
+            "dtype: int64\n",
+            "\n",
+            "Data types:\n",
+            "event_date         datetime64[ns]\n",
+            "ticker                     object\n",
+            "abnormal_return           float64\n",
+            "volatility_5d             float64\n",
+            "label                       int64\n",
+            "dtype: object\n",
+            "\n",
+            "Observations per ticker:\n",
+            "ticker\n",
+            "IWM    37\n",
+            "QQQ    37\n",
+            "SPY    37\n",
+            "XLF    37\n",
+            "dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "event_df = build_event_panel(fomc_dates, tickers)\n",
+        "\n",
+        "print(event_df.head())\n",
+        "print(\"\\nMissing values:\")\n",
+        "print(event_df.isna().sum())\n",
+        "\n",
+        "print(\"\\nData types:\")\n",
+        "print(event_df.dtypes)\n",
+        "\n",
+        "print(\"\\nObservations per ticker:\")\n",
+        "print(event_df.groupby(\"ticker\").size())\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "00a52beb",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
